# anki-sentences

./: .gitignore  Cargo.toml  README.md  anki_satze.sql
app/: Cargo.toml  test_worte.csv
app/src/: main.rs
app/src/commands/: mod.rs
app/src/commands/config/: clean_data.rs  download_audios.rs  mod.rs
app/src/commands/import/: mod.rs  worte.rs
app/src/commands/review/: mod.rs  setze.rs  worte.rs
app/src/console/: _1_add_sentences.rs  _2_1_random_sentences.rs  _2_2_select_thema.rs  _2_3_schwirig_sentences.rs  _2_4_neue_setze.rs  _2_practice_sentences.rs  _3_add_worte.rs  _4_1_neue_worte.rs  _4_2_worte_review.rs  _4_practice_worte.rs  _5_2_audios_on_worte.rs  _5_manage_audios.rs  cli.rs  menu_main.rs  mod.rs
app/src/db/: connection.rs  mod.rs  seeders.rs
app/src/db/raw/: gender_worte.rs  gram_type.rs  mod.rs  niveau_liste.rs  niveau_worte.rs  schwirigkeit_liste.rs  setze.rs  setze_review.rs  worte.rs  worte_gender.rs  worte_review.rs
app/src/db/repositories/: gender_worte.rs  geschichtlich_setze.rs  gram_type.rs  mod.rs  niveau_worte.rs  schwirigkeit_liste.rs  setze.rs  worte.rs  worte_gram_type.rs
app/src/db/schemas/: gender_worte.rs  geschichtlich_setze.rs  gram_type.rs  mod.rs  niveau_liste.rs  niveau_worte.rs  schwirigkeit_liste.rs  setze.rs  setze_audio.rs  setze_review.rs  worte.rs  worte_audio.rs  worte_gender.rs  worte_gram_type.rs  (+1 more)
app/src/helpers/: console.rs  csv.rs  mod.rs  time.rs  ui.rs
app/src/test_helpers/: mod.rs
app/src/traits/: mod.rs  string.rs
app/src/utils/: console.rs  ctx.rs  mod.rs  path.rs  paths.rs  string.rs
(+145 files in other folders)
