[package]
name = "anki_sentences"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.37.0"
once_cell = "1.21.3"
chrono = { version = "0.4.42", features = ["serde"]}
color-eyre = "0.6.5"
csv = "1.4.0"
rustyline = "17.0.2"
inquire="0.9.1"
rand = "0.9.2"
sql_model = {path =  "../sql_model"}
insta = "1.44.1"

[features]
tested = []
